vendored_parsers/tree-sitter-godot-resource/test/corpus/issues/issue-4.txt
=====================================
Constructors accept type arguments #4
=====================================

[resource]
test_array = Dictionary[int, String]({1: "first value",2: "second value",3: "etc"})

---

(resource
  (section
    (identifier)
    (property
      (path)
      (constructor
        (identifier)
        (identifier)
        (identifier)
        (arguments
          (dictionary
            (pair
              (integer)
              (string))
            (pair
              (integer)
              (string))
            (pair
              (integer)
              (string))))))))
